tests/ui/control-crash-next-non-send.stderr
error[E0223]: ambiguous associated type
  --> tests/ui/control-crash-next-non-send.rs:12:24
   |
12 |     require_may_send::<CrashMsg::Next<E0>>();
   |                        ^^^^^^^^^^^^^^^^^^
   |
help: if there were a trait named `Example` with associated type `Next` implemented for `Message<LabelMarker<{ hibana::runtime::consts::LABEL_CRASH }>, CrashNotice>`, you could use the fully-qualified path
   |
12 -     require_may_send::<CrashMsg::Next<E0>>();
12 +     require_may_send::<<Message<LabelMarker<{ hibana::runtime::consts::LABEL_CRASH }>, CrashNotice> as Example>::Next<E0>>();
   |
